src/objects/Company__c.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <description>Australian Business Number</description>
        <label>ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>bank account name</description>
        <inlineHelpText>bank account name</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BSB__c</fullName>
        <label>BSB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branding_Theme_Id__c</fullName>
        <label>Branding Theme Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkout_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkout Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkout_Site__c</fullName>
        <label>Checkout Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Email__c</fullName>
        <label>Customer Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Display_Invoice_Client_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Invoice Client Panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Invoice_Direct_Bank_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Invoice Direct Bank Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Invoice_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Invoice Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Invoice_Pay_By_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Invoice Pay By Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Email_Password__c</fullName>
        <label>Invoice Email Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Logo_Code__c</fullName>
        <label>Logo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmail__c</fullName>
        <inlineHelpText>for separate outbound email send as field between different companies</inlineHelpText>
        <label>OrgWideEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway__c</fullName>
        <globalPicklist>Payment_Gateways</globalPicklist>
        <label>Payment Gateway</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Company official home page</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>term_page__c</fullName>
        <description>term and condition page url</description>
        <label>term page</label>
        <type>TextArea</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>ABN__c</columns>
        <columns>Phone__c</columns>
        <columns>Website__c</columns>
        <columns>Email__c</columns>
        <columns>Payment_Gateway__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>